# pretense-compliance-standards

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  PRETENSE_COMPLIANCE_STANDARDS.md  README.md  pyproject.toml  sensitive_data_samples.py
.claude/skills/agent-orchestration/: SKILL.md
.claude/skills/ci-triage/: SKILL.md
.claude/skills/milestone-release/: SKILL.md
.claude/skills/pcs-project/: SKILL.md
.github/workflows/: bridge.yml  database_update.yml  linting.yml  testing.yml
.pretense/: config.json  usage.json
dlp_benchmark/: README.md  __init__.py  compliance.py  compliance_map.json  corpus_builder.py  detector.py  harness.py
dlp_benchmark/corpus/: blended_regulated_01.json  blended_regulated_02.json  blended_regulated_03.json  blended_regulated_04.json  blended_regulated_05.json  cases.json  tier0_plain.json  tier1_labeled.csv  tier3_encoded.json  tier4_embedded_equities.csv
dlp_benchmark/pretense_bridge/: README.md  run.mjs
dlp_benchmark/regulated/: __init__.py  set01.py  set02.py  set03.py  set04.py  set05.py
frameworks/: README.md
frameworks/APPI/: README.md
frameworks/APRA_CPS234/: README.md
frameworks/AU_PRIVACY/: README.md
frameworks/CCPA_CPRA/: README.md
frameworks/CJIS/: README.md
frameworks/CMMC_L2/: README.md
frameworks/COPPA/: README.md
frameworks/DORA/: README.md
frameworks/DPDP/: README.md
frameworks/FADP/: README.md
frameworks/FERPA/: README.md
frameworks/FISMA/: README.md
frameworks/FedRAMP/: README.md
frameworks/GDPR/: README.md
frameworks/GLBA/: README.md
frameworks/HIPAA/: README.md
frameworks/HITECH/: README.md
frameworks/HITRUST/: README.md
frameworks/IRS_1075/: README.md
frameworks/ISO_27001/: README.md
frameworks/ISO_27701/: README.md
frameworks/LGPD/: README.md
frameworks/NIS2/: README.md
frameworks/NIST_800_171/: README.md
frameworks/NIST_800_53/: README.md
frameworks/NYDFS_500/: README.md
frameworks/PCI_DSS/: README.md
frameworks/PDPA_SG/: README.md
frameworks/PDPA_TH/: README.md
frameworks/PIPA_KR/: README.md
frameworks/PIPEDA/: README.md
frameworks/PIPL/: README.md
frameworks/POPIA/: README.md
frameworks/SOC2/: README.md
frameworks/SOX/: README.md
frameworks/UK_GDPR/: README.md
pretense_compliance_standards/: README.md  __init__.py  compliance.py  compliance_map.json  corpus_builder.py  detector.py  framework_targets.py  generator.py  harness.py  kind_detectors.json  negatives.py
pretense_compliance_standards/corpus/: blended_regulated_01.json  blended_regulated_02.json  blended_regulated_03.json  blended_regulated_04.json  blended_regulated_05.json  blended_regulated_06.json  blended_regulated_07.json  blended_regulated_08.json  cases.json  negatives.json  tier0_plain.json  tier1_labeled.csv  tier3_encoded.json  tier4_embedded_equities.csv
pretense_compliance_standards/pretense_bridge/: README.md  run.mjs  run.test.mjs
pretense_compliance_standards/regulated/: __init__.py  set01.py  set02.py  set03.py  set04.py  set05.py  set06.py  set07.py  set08.py  set09.py  set10.py
tests/: conftest.py  test_dlp_recall.py  test_pcs.py
tests/e2e/: README.md  baseline.json  checks.py  run.sh
