[project]
name = "pretense-compliance-standards"
version = "2.4.0"
description = "Pretense Compliance Standards — a fully-synthetic DLP/compliance testbed scoring how pretense.ai protects regulated data across major compliance frameworks. Built on the FinanceDatabase library (used as the realistic codebase-under-test)."
license = {text = "MIT"}
authors = [
    { name = "Jeroen Bouma" }
]
maintainers = [
    { name = "Jimmy Malhan" }
]
readme = "README.md"
homepage = "https://github.com/jimmymalhan/pretense-compliance-standards"
repository = "https://github.com/jimmymalhan/pretense-compliance-standards"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = [
    "Finance",
    "Database",
    "Equities",
    "ETFs",
    "Funds",
    "Indices",
    "Currencies",
    "Cryptocurrencies",
    "Money Markets",
]
requires-python = ">=3.10, <3.16"
dependencies = [
    "financetoolkit>=2.0.3,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ipykernel>=6.29",
    "black[jupyter]>=25.1",
    "codespell>=2.3",
    "pytest-mock>=3.14",
    "pytest-recording>=0.13",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "pytest-timeout>=2.3",
    "tqdm>=4.67",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pretense_compliance_standards", "financedatabase"]

[tool.hatch.build.targets.sdist]
include = [
    "pretense_compliance_standards/**",
    "financedatabase/**",
]

[tool.black]
target-version = ["py313"]

[tool.ruff]
line-length = 122
lint.select = ["E", "W", "F", "Q", "W", "S", "UP", "I", "PD", "SIM", "PLC", "PLE", "PLR", "PLW"]
lint.ignore = ["S105", "S106", "S107", "PLR0913", "PLR0912", "PLR0911", "PLR0915", "PD010", "PD013", "S310", "S301", "S101", "PLR2004"]
exclude = ["conftest.py", "examples", "compression"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.lint.isort]
profile = "black"
line_length = 122
skip_gitignore = true
combine_as_imports = true

[tool.codespell]
ignore-words-list = 'berkley,Sie,VIE,ore,HANSOME,Worchester,OIS'
skip = '*.json,./.git,pyproject.toml,uv.lock,examples,*.csv'

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pytest.PytestAssertRewriteWarning:",
]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "record_stdout: capture and snapshot stdout output for the marked test",
    # Per-compliance-framework tags (kept in sync with compliance.FRAMEWORKS).
    # Run e.g. `pytest tests/test_pcs.py -m hipaa`.
    "soc2: SOC2 framework",
    "iso_27001: ISO 27001 framework",
    "iso_27701: ISO 27701 framework",
    "nist_800_53: NIST 800-53 framework",
    "nist_800_171: NIST 800-171 framework",
    "fedramp: FedRAMP framework",
    "fisma: FISMA framework",
    "nis2: NIS2 framework",
    "nydfs_500: NYDFS 500 framework",
    "dora: DORA framework",
    "apra_cps234: APRA CPS 234 framework",
    "hipaa: HIPAA framework",
    "hitech: HITECH framework",
    "hitrust: HITRUST framework",
    "gdpr: GDPR framework",
    "uk_gdpr: UK GDPR framework",
    "ccpa_cpra: CCPA/CPRA framework",
    "lgpd: LGPD framework",
    "pipeda: PIPEDA framework",
    "popia: POPIA framework",
    "pipl: PIPL framework",
    "pdpa_sg: PDPA-SG framework",
    "coppa: COPPA framework",
    "ferpa: FERPA framework",
    "sox: SOX framework",
    "glba: GLBA framework",
    "cmmc_l2: CMMC L2 framework",
    "pci_dss: PCI DSS framework",
]